--- a/resources.qrc
+++ b/resources.qrc
@@ -62,5 +62,7 @@
         <file>src/gui/ConflictDelegate.qml</file>
         <file>src/gui/ConflictItemFileInfo.qml</file>
         <file>src/gui/filedetails/NCInputDateField.qml</file>
+        <file>src/gui/nmcgui/NMCLogoArea.qml</file>
+        <file>src/gui/nmcgui/NMCHeaderButton.qml</file>
     </qresource>
 </RCC>
